[package]
name = "rusty-images"
version = "0.1.0"
edition = "2021"
authors = ["penumbra23 <glbranimir@gmail.com>"]
keywords = ["images", "image-transformation", "restful-api"]
license = "MIT"

[dependencies]
warp = "0.3.2"
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4.17"
env_logger = "0.9.0"
image = "0.24.3"
futures = "0.3.21"
bytes = "1.2.1"